--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,24 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <h1>Comment node removal reproduction case</h1>
+    <p>
+      This is reproduction case for error <em>Uncaught TypeError: Cannot read property 'namespaceURI' of null</em>
+    </p>
+    <p>
+      Reproduction steps:
+      <ul>
+        <li>Click the 'Click me' button</li>
+        <li>Click somewhere in this page</li>
+      </ul>
+    </p>
+
+    <p>
+      Clicking the button will unmount the component and the 'container' (which is a comment node in this case) in a `setTimeout`.
+      Note that if timeout is removed from `cleanup` function in `src/index.js` second step is not necessary and same error will
+      occur when clicking the button.
+    </p>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
